# CaptionFlow

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
backend/app/: main.py  sidecar.py
backend/app/api/: jobs.py  settings.py
backend/app/asr/: factory.py  faster_whisper.py  mlx_whisper.py  output.py  schemas.py  segmentation.py  (+3 more)
backend/tests/: conftest.py  test_asr_factory.py  test_asr_segmentation.py  test_batching.py  test_failure.py  test_faster_whisper_transcriber.py  test_folder_opener.py  test_health.py  test_job_runner.py  test_jobs_api.py  test_jobs_repository.py  test_media_binaries.py  test_media_mux.py  test_mlx_whisper_transcriber.py  test_names.py  test_openai_compatible_provider.py  test_output_formats.py  test_parse_response.py  test_paths.py  test_preferences.py  test_runner_failures.py  test_secrets.py  test_settings.py  test_srt_service.py  test_subtitle_merge.py  test_whisper_adapter.py  test_whisper_audio.py  test_whisper_dtw.py  test_whisperkit_server_transcriber.py  test_ytdlp.py
docs/: macos-packaging.md  maturity-audit.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  formDefaults.ts  i18n.ts  styles.css  types.ts
scripts/: build_backend_sidecar.sh  check_whisperkit_memory.py  download_faster_whisper_model.py  fix_dmg_volume_icon.sh  setup_media_tools.sh  setup_whisperkit.sh  smoke_whisperkit.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+54 files in other folders)
