[project]
name = "captionflow"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "pyinstaller>=6.0.0",
]
legacy-asr = [
  "mlx-whisper>=0.4.0",
  "faster-whisper>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = []
