[package]
name = "captionflow"
version = "0.1.1"
description = "A local-first macOS workbench for video transcription and subtitle translation."
authors = ["StoneLzy"]
edition = "2021"

[lib]
name = "captionflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
